# daskalo

./: .gitignore  AGENTS.md  README.md  bootstrap.sh  deploy.sh  dev.sh
backend/: .env.deploy.example  .env.local.example  .gitignore  callable_helpers.py  deploy.sh  fn_complete_chapter.py  fn_complete_practice.py  fn_evaluate.py  fn_own_word.py  log_setup.py  main.py  pyproject.toml
backend/models/: firestore.py
backend/scripts/: generate_docs.py
backend/services/: evaluation.py  own_word.py  practice_progress.py  progress.py
backend/tests/: conftest.py  test_callable_helpers.py  test_evaluation.py  test_fn_evaluate.py  test_own_word.py
content-cli/: .env.example  .gitignore  graph.py  main.py  practice_graph.py  practice_state.py  pyproject.toml  state.py
content-cli/models/: __init__.py  content_models.py
content-cli/nodes/: build_context.py  draft_lesson_core.py  extract_grammar_outlines.py  extract_vocabulary.py  generate_exercises.py  generate_grammar_notes.py  generate_grammar_summary.py  generate_media.py  generate_practice.py  generate_practice_media.py  package_output.py  package_practice_output.py  plan_lesson.py  review_content.py
content-cli/prompts/: content_prompts.py
content-cli/services/: __init__.py  ingest_helpers.py  local_ingest.py  remote_ingest.py
content-cli/utils/: llm_utils.py  media_utils.py
docs/: ARCHITECTURE.md  CONTENT_PIPELINE.md  DATA_MODEL.md  PHASES.md  SECURITY_AND_INFRA.md
frontend/: .gitignore  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  storage.rules
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/environments/: environment.prod.ts.example  environment.ts
infra/: api_gateway.tf  apis.tf  firebase_hosting.tf  firestore.tf  functions.tf  iam.tf  main.tf  openapi.yaml.tpl  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
shared/data/: curriculum.yaml  curriculum_loader.py
shared/data/books/: book_1.yaml  book_2.yaml  (+7 more)
(+36 files in other folders)
